--- a/RapidShot/App.config
+++ b/RapidShot/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="RapidSnap.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
@@ -11,4 +16,26 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <RapidSnap.Properties.Settings>
+      <setting name="Autostart" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="AutoUpdate" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SaveToClipboard" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="SaveToDisk" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="HotkeySnap" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+        </value>
+      </setting>
+    </RapidSnap.Properties.Settings>
+  </userSettings>
 </configuration>
