--- a/RapidShot/App.config
+++ b/RapidShot/App.config
@@ -36,6 +36,9 @@
             xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
         </value>
       </setting>
+      <setting name="TableFlips" serializeAs="String">
+        <value>0</value>
+      </setting>
     </RapidSnap.Properties.Settings>
   </userSettings>
 </configuration>
